# distributed-groth16

./: .gitignore  Cargo.toml  clean_projects.sh
ark-circom/: Cargo.toml
ark-circom/src/: zkey.rs
ark-circom/src/circom/: circuit.rs  qap.rs
common/: .gitignore  Cargo.toml
common/src/dto/: mod.rs
common/src/utils/: arkworks_helpers.rs  file.rs  mod.rs  serializer.rs
dist-primitives/src/dfft/: mod.rs
dist-primitives/src/dmsm/: mod.rs
docs/: azure-commnds.md  azure-dev-vm-init.md  hack-mvp-spec.md  node-runner-spec.md
fixtures/million/: .gitignore  input.json  million.circom  proof.json  public.json  verification_key.json
fixtures/million/million_js/: million.wasm
groth16/: Cargo.toml
groth16/examples/: d_sha256.rs  million.rs  nonlocal_sha256.rs  sha256.rs  test.rs
groth16/src/: proving_key.rs  qap.rs
mpc-api/: .gitignore  Cargo.toml  Makefile.toml  cleanup_circuits.sh
mpc-api/src/: main.rs
mpc-api/src/utils/: serializer.rs
mpc-net/src/: multi.rs
scripts/: d_sha256.zsh  million.zsh  sha256_test.zsh
zk-cli/: Cargo.toml  README.md
zk-cli/src/: main.rs
zk-cli/test-circuits/sha256/: input.json  public.json
