[workspace]
resolver = "2"
members = [
    "secret-sharing",
    "dist-primitives",
    "mpc-net",
    "mpc-api",
    "groth16",
    "zk-cli",
    "common",
    "ark-circom"
]

[patch.crates-io]
ark-relations = { git = "https://github.com/zkHubHQ/snark.git", default-features = false, branch = "distributed-groth16" }