[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["multipart"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }

# zk stuff
groth16 = { version = "0.1.0", path = "../groth16" }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-bn254 = {version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = {version = "0.4.0", default-features = false}
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git" }
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}
ark-crypto-primitives = {version = "0.4.0", default-features = false}
ark-ff = {version = "0.4.0", default-features = false}
ark-relations = { version = "0.4.0", default-features = false }
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
reqwest = { version = "0.11.23", features = ["json"] }    # For making HTTP requests
