[package]
name = "mpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
serde = "1.0.193"
serde_json = "1.0.108"

groth16 = { version = "0.1.0", path = "../groth16" }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-bn254 = {version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = {version = "0.4.0", default-features = false}
