[package]
name = "mpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["multipart", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
serde = "1.0"
serde_json = "1.0"
log = "0.4.0"
rand = "0.8.5"
chrono = "0.4.31"
bincode = "1.3.3"
common = { path = "../common" }
color-backtrace = "0.6.1"
env_logger = "0.10.1"
num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }

# zk stuff
groth16 = { version = "0.1.0", path = "../groth16" }
ark-groth16 = { git = "https://github.com/zkHubHQ/groth16.git", default-features = false, branch = "distributed-groth16" }
ark-bn254 = {version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = {version = "0.4.0", default-features = false}
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-circom = { version = "0.1.0", path = "../ark-circom" }
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}
ark-crypto-primitives = { git = "https://github.com/zkHubHQ/crypto-primitives.git", default-features = false, branch = "distributed-groth16" }
ark-ff = {version = "0.4.0", default-features = false}
ark-relations = { git = "https://github.com/zkHubHQ/snark.git", default-features = false, branch = "distributed-groth16" }
ark-snark = { git = "https://github.com/zkHubHQ/snark.git", default-features = false, branch = "distributed-groth16" }
secret-sharing = { version = "0.1.0", path = "../secret-sharing" }
ark-poly = {version = "0.4.0", default-features = false}
mpc-net = { version = "0.1.0", path = "../mpc-net" }

[dev-dependencies]
env_logger = "0.10.0"
